# september

./: .gitignore  README.md  devpost.md  plan.md  run.sh
backend/: .env.example  api_server.py  main.py  phase1_output.json  requirements.txt  setup_auth.py  test_cached_demo.py  test_end_to_end.py  test_fabricate.py  test_pdf.py  test_pipeline.py  test_synthesis.py  test_twitter_agent.py  test_yutori.py
backend/data/cache/: profile_alexc.json  profile_dhruvbatra.json  profile_janedoe.json
backend/src/agents/: company_researcher.py  decision_engine.py  linkedin_browser.py  twitter_browser.py  yutori_researcher.py
backend/src/config/: agentql_config.py  fabricate_config.py  freepik_config.py  yutori_config.py
backend/src/demo/: cache_manager.py  populate_cache.py
backend/src/extractors/: data_transformer.py  profile_extractor.py  theme_engine.py
backend/src/fabricate/: response_coach.py  (+4 more)
backend/templates/: briefing.html
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/references/: implementation_steps.md
frontend/references/september-main/: Test_one.m4a  api.py  bad_one.m4a  compliance_results.json  debug_test.py  good_one.m4a  main.py  pyproject.toml  test_compliance.py  test_transcription.py  transcript_output.txt
phases/: phase-1-yutori-navigator.md  phase-2-agentql-extraction.md  phase-4-cline-synthesis.md  phase-5-tonic-fabricate.md  phase-6-freepik-visual.md
retool/components/: MockConversations.json  ThemeChart.json  WhyPanel.json
retool/queries/: downloadPDF.json  generateBriefing.json
(+42 files in other folders)
